reparar error con función length

--- a/edicion_validacion.Rmd
+++ b/edicion_validacion.Rmd
@@ -882,16 +882,14 @@ Hacemos `inner_join` para ver qué ocurre
 personas2 <- personas_alterado %>% 
   inner_join(hogares_alterado, by = "folio")
 
-length(unique(personas2))
+length(unique(personas2$folio))
 ```
 
 --
 
-Solo 248 hogares se mantienen en la tabla final
+Solo 6213 hogares se mantienen en la tabla final
 
---
 
-**Recomendación**: inner_join es un poco lento. Se puede reemplazar por `left_join` y `filter`
 
 ---
 .linea-superior[]
